// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Renderers BadgeRenderer 1`] = `
NodeObject {
  "children": Array [],
  "closingElement": NodeObject {
    "end": -1,
    "flags": 8,
    "kind": 277,
    "modifierFlagsCache": 0,
    "parent": undefined,
    "pos": -1,
    "tagName": IdentifierObject {
      "end": -1,
      "escapedText": "Badge",
      "flags": 8,
      "kind": 78,
      "modifierFlagsCache": 0,
      "originalKeywordKind": undefined,
      "parent": undefined,
      "pos": -1,
      "transformFlags": 0,
    },
    "transformFlags": 2,
  },
  "end": -1,
  "flags": 8,
  "kind": 274,
  "modifierFlagsCache": 0,
  "openingElement": NodeObject {
    "attributes": NodeObject {
      "end": -1,
      "flags": 8,
      "kind": 282,
      "modifierFlagsCache": 0,
      "parent": undefined,
      "pos": -1,
      "properties": Array [
        NodeObject {
          "end": -1,
          "expression": IdentifierObject {
            "end": -1,
            "escapedText": "props",
            "flags": 8,
            "kind": 78,
            "modifierFlagsCache": 0,
            "originalKeywordKind": undefined,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 0,
          },
          "flags": 8,
          "kind": 283,
          "modifierFlagsCache": 0,
          "parent": undefined,
          "pos": -1,
          "transformFlags": 2,
        },
        NodeObject {
          "end": -1,
          "expression": NodeObject {
            "arguments": Array [
              NodeObject {
                "emitNode": Object {
                  "flags": 131072,
                },
                "end": -1,
                "expression": IdentifierObject {
                  "end": -1,
                  "escapedText": "props",
                  "flags": 8,
                  "kind": 78,
                  "modifierFlagsCache": 0,
                  "originalKeywordKind": undefined,
                  "parent": undefined,
                  "pos": -1,
                  "transformFlags": 0,
                },
                "flags": 8,
                "kind": 202,
                "modifierFlagsCache": 0,
                "name": IdentifierObject {
                  "end": -1,
                  "escapedText": "overrides",
                  "flags": 8,
                  "kind": 78,
                  "modifierFlagsCache": 0,
                  "originalKeywordKind": undefined,
                  "parent": undefined,
                  "pos": -1,
                  "transformFlags": 0,
                },
                "parent": undefined,
                "pos": -1,
                "transformFlags": 0,
              },
              TokenObject {
                "end": -1,
                "flags": 8,
                "hasExtendedUnicodeEscape": undefined,
                "kind": 10,
                "modifierFlagsCache": 0,
                "parent": undefined,
                "pos": -1,
                "singleQuote": undefined,
                "text": "Badge",
                "transformFlags": 0,
              },
            ],
            "end": -1,
            "expression": IdentifierObject {
              "end": -1,
              "escapedText": "getOverrideProps",
              "flags": 8,
              "kind": 78,
              "modifierFlagsCache": 0,
              "originalKeywordKind": undefined,
              "parent": undefined,
              "pos": -1,
              "transformFlags": 0,
            },
            "flags": 8,
            "kind": 204,
            "modifierFlagsCache": 0,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 0,
            "typeArguments": undefined,
          },
          "flags": 8,
          "kind": 283,
          "modifierFlagsCache": 0,
          "parent": undefined,
          "pos": -1,
          "transformFlags": 2,
        },
      ],
      "transformFlags": 2,
    },
    "end": -1,
    "flags": 8,
    "kind": 276,
    "modifierFlagsCache": 0,
    "parent": undefined,
    "pos": -1,
    "tagName": IdentifierObject {
      "end": -1,
      "escapedText": "Badge",
      "flags": 8,
      "kind": 78,
      "modifierFlagsCache": 0,
      "originalKeywordKind": undefined,
      "parent": undefined,
      "pos": -1,
      "transformFlags": 0,
    },
    "transformFlags": 2,
    "typeArguments": undefined,
  },
  "parent": undefined,
  "pos": -1,
  "transformFlags": 2,
}
`;

exports[`Component Renderers BoxRenderer 1`] = `
NodeObject {
  "children": Array [],
  "closingElement": NodeObject {
    "end": -1,
    "flags": 8,
    "kind": 277,
    "modifierFlagsCache": 0,
    "parent": undefined,
    "pos": -1,
    "tagName": IdentifierObject {
      "end": -1,
      "escapedText": "View",
      "flags": 8,
      "kind": 78,
      "modifierFlagsCache": 0,
      "originalKeywordKind": undefined,
      "parent": undefined,
      "pos": -1,
      "transformFlags": 0,
    },
    "transformFlags": 2,
  },
  "end": -1,
  "flags": 8,
  "kind": 274,
  "modifierFlagsCache": 0,
  "openingElement": NodeObject {
    "attributes": NodeObject {
      "end": -1,
      "flags": 8,
      "kind": 282,
      "modifierFlagsCache": 0,
      "parent": undefined,
      "pos": -1,
      "properties": Array [
        NodeObject {
          "end": -1,
          "expression": IdentifierObject {
            "end": -1,
            "escapedText": "props",
            "flags": 8,
            "kind": 78,
            "modifierFlagsCache": 0,
            "originalKeywordKind": undefined,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 0,
          },
          "flags": 8,
          "kind": 283,
          "modifierFlagsCache": 0,
          "parent": undefined,
          "pos": -1,
          "transformFlags": 2,
        },
        NodeObject {
          "end": -1,
          "expression": NodeObject {
            "arguments": Array [
              NodeObject {
                "emitNode": Object {
                  "flags": 131072,
                },
                "end": -1,
                "expression": IdentifierObject {
                  "end": -1,
                  "escapedText": "props",
                  "flags": 8,
                  "kind": 78,
                  "modifierFlagsCache": 0,
                  "originalKeywordKind": undefined,
                  "parent": undefined,
                  "pos": -1,
                  "transformFlags": 0,
                },
                "flags": 8,
                "kind": 202,
                "modifierFlagsCache": 0,
                "name": IdentifierObject {
                  "end": -1,
                  "escapedText": "overrides",
                  "flags": 8,
                  "kind": 78,
                  "modifierFlagsCache": 0,
                  "originalKeywordKind": undefined,
                  "parent": undefined,
                  "pos": -1,
                  "transformFlags": 0,
                },
                "parent": undefined,
                "pos": -1,
                "transformFlags": 0,
              },
              TokenObject {
                "end": -1,
                "flags": 8,
                "hasExtendedUnicodeEscape": undefined,
                "kind": 10,
                "modifierFlagsCache": 0,
                "parent": undefined,
                "pos": -1,
                "singleQuote": undefined,
                "text": "Box",
                "transformFlags": 0,
              },
            ],
            "end": -1,
            "expression": IdentifierObject {
              "end": -1,
              "escapedText": "getOverrideProps",
              "flags": 8,
              "kind": 78,
              "modifierFlagsCache": 0,
              "originalKeywordKind": undefined,
              "parent": undefined,
              "pos": -1,
              "transformFlags": 0,
            },
            "flags": 8,
            "kind": 204,
            "modifierFlagsCache": 0,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 0,
            "typeArguments": undefined,
          },
          "flags": 8,
          "kind": 283,
          "modifierFlagsCache": 0,
          "parent": undefined,
          "pos": -1,
          "transformFlags": 2,
        },
      ],
      "transformFlags": 2,
    },
    "end": -1,
    "flags": 8,
    "kind": 276,
    "modifierFlagsCache": 0,
    "parent": undefined,
    "pos": -1,
    "tagName": IdentifierObject {
      "end": -1,
      "escapedText": "View",
      "flags": 8,
      "kind": 78,
      "modifierFlagsCache": 0,
      "originalKeywordKind": undefined,
      "parent": undefined,
      "pos": -1,
      "transformFlags": 0,
    },
    "transformFlags": 2,
    "typeArguments": undefined,
  },
  "parent": undefined,
  "pos": -1,
  "transformFlags": 2,
}
`;

exports[`Component Renderers ButtonRenderer 1`] = `
NodeObject {
  "children": Array [],
  "closingElement": NodeObject {
    "end": -1,
    "flags": 8,
    "kind": 277,
    "modifierFlagsCache": 0,
    "parent": undefined,
    "pos": -1,
    "tagName": IdentifierObject {
      "end": -1,
      "escapedText": "Button",
      "flags": 8,
      "kind": 78,
      "modifierFlagsCache": 0,
      "originalKeywordKind": undefined,
      "parent": undefined,
      "pos": -1,
      "transformFlags": 0,
    },
    "transformFlags": 2,
  },
  "end": -1,
  "flags": 8,
  "kind": 274,
  "modifierFlagsCache": 0,
  "openingElement": NodeObject {
    "attributes": NodeObject {
      "end": -1,
      "flags": 8,
      "kind": 282,
      "modifierFlagsCache": 0,
      "parent": undefined,
      "pos": -1,
      "properties": Array [
        NodeObject {
          "end": -1,
          "expression": IdentifierObject {
            "end": -1,
            "escapedText": "props",
            "flags": 8,
            "kind": 78,
            "modifierFlagsCache": 0,
            "originalKeywordKind": undefined,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 0,
          },
          "flags": 8,
          "kind": 283,
          "modifierFlagsCache": 0,
          "parent": undefined,
          "pos": -1,
          "transformFlags": 2,
        },
        NodeObject {
          "end": -1,
          "expression": NodeObject {
            "arguments": Array [
              NodeObject {
                "emitNode": Object {
                  "flags": 131072,
                },
                "end": -1,
                "expression": IdentifierObject {
                  "end": -1,
                  "escapedText": "props",
                  "flags": 8,
                  "kind": 78,
                  "modifierFlagsCache": 0,
                  "originalKeywordKind": undefined,
                  "parent": undefined,
                  "pos": -1,
                  "transformFlags": 0,
                },
                "flags": 8,
                "kind": 202,
                "modifierFlagsCache": 0,
                "name": IdentifierObject {
                  "end": -1,
                  "escapedText": "overrides",
                  "flags": 8,
                  "kind": 78,
                  "modifierFlagsCache": 0,
                  "originalKeywordKind": undefined,
                  "parent": undefined,
                  "pos": -1,
                  "transformFlags": 0,
                },
                "parent": undefined,
                "pos": -1,
                "transformFlags": 0,
              },
              TokenObject {
                "end": -1,
                "flags": 8,
                "hasExtendedUnicodeEscape": undefined,
                "kind": 10,
                "modifierFlagsCache": 0,
                "parent": undefined,
                "pos": -1,
                "singleQuote": undefined,
                "text": "Button",
                "transformFlags": 0,
              },
            ],
            "end": -1,
            "expression": IdentifierObject {
              "end": -1,
              "escapedText": "getOverrideProps",
              "flags": 8,
              "kind": 78,
              "modifierFlagsCache": 0,
              "originalKeywordKind": undefined,
              "parent": undefined,
              "pos": -1,
              "transformFlags": 0,
            },
            "flags": 8,
            "kind": 204,
            "modifierFlagsCache": 0,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 0,
            "typeArguments": undefined,
          },
          "flags": 8,
          "kind": 283,
          "modifierFlagsCache": 0,
          "parent": undefined,
          "pos": -1,
          "transformFlags": 2,
        },
      ],
      "transformFlags": 2,
    },
    "end": -1,
    "flags": 8,
    "kind": 276,
    "modifierFlagsCache": 0,
    "parent": undefined,
    "pos": -1,
    "tagName": IdentifierObject {
      "end": -1,
      "escapedText": "Button",
      "flags": 8,
      "kind": 78,
      "modifierFlagsCache": 0,
      "originalKeywordKind": undefined,
      "parent": undefined,
      "pos": -1,
      "transformFlags": 0,
    },
    "transformFlags": 2,
    "typeArguments": undefined,
  },
  "parent": undefined,
  "pos": -1,
  "transformFlags": 2,
}
`;

exports[`Component Renderers CardRenderer 1`] = `
NodeObject {
  "children": Array [],
  "closingElement": NodeObject {
    "end": -1,
    "flags": 8,
    "kind": 277,
    "modifierFlagsCache": 0,
    "parent": undefined,
    "pos": -1,
    "tagName": IdentifierObject {
      "end": -1,
      "escapedText": "Card",
      "flags": 8,
      "kind": 78,
      "modifierFlagsCache": 0,
      "originalKeywordKind": undefined,
      "parent": undefined,
      "pos": -1,
      "transformFlags": 0,
    },
    "transformFlags": 2,
  },
  "end": -1,
  "flags": 8,
  "kind": 274,
  "modifierFlagsCache": 0,
  "openingElement": NodeObject {
    "attributes": NodeObject {
      "end": -1,
      "flags": 8,
      "kind": 282,
      "modifierFlagsCache": 0,
      "parent": undefined,
      "pos": -1,
      "properties": Array [
        NodeObject {
          "end": -1,
          "expression": IdentifierObject {
            "end": -1,
            "escapedText": "props",
            "flags": 8,
            "kind": 78,
            "modifierFlagsCache": 0,
            "originalKeywordKind": undefined,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 0,
          },
          "flags": 8,
          "kind": 283,
          "modifierFlagsCache": 0,
          "parent": undefined,
          "pos": -1,
          "transformFlags": 2,
        },
        NodeObject {
          "end": -1,
          "expression": NodeObject {
            "arguments": Array [
              NodeObject {
                "emitNode": Object {
                  "flags": 131072,
                },
                "end": -1,
                "expression": IdentifierObject {
                  "end": -1,
                  "escapedText": "props",
                  "flags": 8,
                  "kind": 78,
                  "modifierFlagsCache": 0,
                  "originalKeywordKind": undefined,
                  "parent": undefined,
                  "pos": -1,
                  "transformFlags": 0,
                },
                "flags": 8,
                "kind": 202,
                "modifierFlagsCache": 0,
                "name": IdentifierObject {
                  "end": -1,
                  "escapedText": "overrides",
                  "flags": 8,
                  "kind": 78,
                  "modifierFlagsCache": 0,
                  "originalKeywordKind": undefined,
                  "parent": undefined,
                  "pos": -1,
                  "transformFlags": 0,
                },
                "parent": undefined,
                "pos": -1,
                "transformFlags": 0,
              },
              TokenObject {
                "end": -1,
                "flags": 8,
                "hasExtendedUnicodeEscape": undefined,
                "kind": 10,
                "modifierFlagsCache": 0,
                "parent": undefined,
                "pos": -1,
                "singleQuote": undefined,
                "text": "Card",
                "transformFlags": 0,
              },
            ],
            "end": -1,
            "expression": IdentifierObject {
              "end": -1,
              "escapedText": "getOverrideProps",
              "flags": 8,
              "kind": 78,
              "modifierFlagsCache": 0,
              "originalKeywordKind": undefined,
              "parent": undefined,
              "pos": -1,
              "transformFlags": 0,
            },
            "flags": 8,
            "kind": 204,
            "modifierFlagsCache": 0,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 0,
            "typeArguments": undefined,
          },
          "flags": 8,
          "kind": 283,
          "modifierFlagsCache": 0,
          "parent": undefined,
          "pos": -1,
          "transformFlags": 2,
        },
      ],
      "transformFlags": 2,
    },
    "end": -1,
    "flags": 8,
    "kind": 276,
    "modifierFlagsCache": 0,
    "parent": undefined,
    "pos": -1,
    "tagName": IdentifierObject {
      "end": -1,
      "escapedText": "Card",
      "flags": 8,
      "kind": 78,
      "modifierFlagsCache": 0,
      "originalKeywordKind": undefined,
      "parent": undefined,
      "pos": -1,
      "transformFlags": 0,
    },
    "transformFlags": 2,
    "typeArguments": undefined,
  },
  "parent": undefined,
  "pos": -1,
  "transformFlags": 2,
}
`;

exports[`Component Renderers CollectionRenderer 1`] = `
NodeObject {
  "children": Array [
    NodeObject {
      "dotDotDotToken": undefined,
      "end": -1,
      "expression": NodeObject {
        "body": NodeObject {
          "end": -1,
          "expression": undefined,
          "flags": 8,
          "kind": 208,
          "modifierFlagsCache": 0,
          "parent": undefined,
          "pos": -1,
          "transformFlags": 0,
        },
        "decorators": undefined,
        "end": -1,
        "equalsGreaterThanToken": TokenObject {
          "end": -1,
          "flags": 8,
          "kind": 38,
          "modifierFlagsCache": 0,
          "parent": undefined,
          "pos": -1,
          "transformFlags": 0,
        },
        "flags": 8,
        "kind": 210,
        "localSymbol": undefined,
        "locals": undefined,
        "modifierFlagsCache": 0,
        "modifiers": undefined,
        "name": undefined,
        "nextContainer": undefined,
        "parameters": Array [
          NodeObject {
            "decorators": undefined,
            "dotDotDotToken": undefined,
            "end": -1,
            "flags": 8,
            "initializer": undefined,
            "kind": 161,
            "localSymbol": undefined,
            "locals": undefined,
            "modifierFlagsCache": 0,
            "modifiers": undefined,
            "name": IdentifierObject {
              "end": -1,
              "escapedText": "item",
              "flags": 8,
              "kind": 78,
              "modifierFlagsCache": 0,
              "originalKeywordKind": undefined,
              "parent": undefined,
              "pos": -1,
              "transformFlags": 0,
            },
            "nextContainer": undefined,
            "parent": undefined,
            "pos": -1,
            "questionToken": undefined,
            "symbol": undefined,
            "transformFlags": 0,
            "type": undefined,
          },
          NodeObject {
            "decorators": undefined,
            "dotDotDotToken": undefined,
            "end": -1,
            "flags": 8,
            "initializer": undefined,
            "kind": 161,
            "localSymbol": undefined,
            "locals": undefined,
            "modifierFlagsCache": 0,
            "modifiers": undefined,
            "name": IdentifierObject {
              "end": -1,
              "escapedText": "index",
              "flags": 8,
              "kind": 78,
              "modifierFlagsCache": 0,
              "originalKeywordKind": undefined,
              "parent": undefined,
              "pos": -1,
              "transformFlags": 0,
            },
            "nextContainer": undefined,
            "parent": undefined,
            "pos": -1,
            "questionToken": undefined,
            "symbol": undefined,
            "transformFlags": 0,
            "type": undefined,
          },
        ],
        "parent": undefined,
        "pos": -1,
        "symbol": undefined,
        "transformFlags": 512,
        "type": undefined,
        "typeParameters": undefined,
      },
      "flags": 8,
      "kind": 284,
      "modifierFlagsCache": 0,
      "parent": undefined,
      "pos": -1,
      "transformFlags": 514,
    },
  ],
  "closingElement": NodeObject {
    "end": -1,
    "flags": 8,
    "kind": 277,
    "modifierFlagsCache": 0,
    "parent": undefined,
    "pos": -1,
    "tagName": IdentifierObject {
      "end": -1,
      "escapedText": "Collection",
      "flags": 8,
      "kind": 78,
      "modifierFlagsCache": 0,
      "originalKeywordKind": undefined,
      "parent": undefined,
      "pos": -1,
      "transformFlags": 0,
    },
    "transformFlags": 2,
  },
  "end": -1,
  "flags": 8,
  "kind": 274,
  "modifierFlagsCache": 0,
  "openingElement": NodeObject {
    "attributes": NodeObject {
      "end": -1,
      "flags": 8,
      "kind": 282,
      "modifierFlagsCache": 0,
      "parent": undefined,
      "pos": -1,
      "properties": Array [
        NodeObject {
          "end": -1,
          "flags": 8,
          "initializer": NodeObject {
            "dotDotDotToken": undefined,
            "end": -1,
            "expression": IdentifierObject {
              "end": -1,
              "escapedText": "items",
              "flags": 8,
              "kind": 78,
              "modifierFlagsCache": 0,
              "originalKeywordKind": undefined,
              "parent": undefined,
              "pos": -1,
              "transformFlags": 0,
            },
            "flags": 8,
            "kind": 284,
            "modifierFlagsCache": 0,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 2,
          },
          "kind": 281,
          "modifierFlagsCache": 0,
          "name": IdentifierObject {
            "end": -1,
            "escapedText": "items",
            "flags": 8,
            "kind": 78,
            "modifierFlagsCache": 0,
            "originalKeywordKind": undefined,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 0,
          },
          "parent": undefined,
          "pos": -1,
          "transformFlags": 2,
        },
        NodeObject {
          "end": -1,
          "expression": IdentifierObject {
            "end": -1,
            "escapedText": "props",
            "flags": 8,
            "kind": 78,
            "modifierFlagsCache": 0,
            "originalKeywordKind": undefined,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 0,
          },
          "flags": 8,
          "kind": 283,
          "modifierFlagsCache": 0,
          "parent": undefined,
          "pos": -1,
          "transformFlags": 2,
        },
        NodeObject {
          "end": -1,
          "expression": NodeObject {
            "arguments": Array [
              NodeObject {
                "emitNode": Object {
                  "flags": 131072,
                },
                "end": -1,
                "expression": IdentifierObject {
                  "end": -1,
                  "escapedText": "props",
                  "flags": 8,
                  "kind": 78,
                  "modifierFlagsCache": 0,
                  "originalKeywordKind": undefined,
                  "parent": undefined,
                  "pos": -1,
                  "transformFlags": 0,
                },
                "flags": 8,
                "kind": 202,
                "modifierFlagsCache": 0,
                "name": IdentifierObject {
                  "end": -1,
                  "escapedText": "overrides",
                  "flags": 8,
                  "kind": 78,
                  "modifierFlagsCache": 0,
                  "originalKeywordKind": undefined,
                  "parent": undefined,
                  "pos": -1,
                  "transformFlags": 0,
                },
                "parent": undefined,
                "pos": -1,
                "transformFlags": 0,
              },
              TokenObject {
                "end": -1,
                "flags": 8,
                "hasExtendedUnicodeEscape": undefined,
                "kind": 10,
                "modifierFlagsCache": 0,
                "parent": undefined,
                "pos": -1,
                "singleQuote": undefined,
                "text": "Collection",
                "transformFlags": 0,
              },
            ],
            "end": -1,
            "expression": IdentifierObject {
              "end": -1,
              "escapedText": "getOverrideProps",
              "flags": 8,
              "kind": 78,
              "modifierFlagsCache": 0,
              "originalKeywordKind": undefined,
              "parent": undefined,
              "pos": -1,
              "transformFlags": 0,
            },
            "flags": 8,
            "kind": 204,
            "modifierFlagsCache": 0,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 0,
            "typeArguments": undefined,
          },
          "flags": 8,
          "kind": 283,
          "modifierFlagsCache": 0,
          "parent": undefined,
          "pos": -1,
          "transformFlags": 2,
        },
      ],
      "transformFlags": 2,
    },
    "end": -1,
    "flags": 8,
    "kind": 276,
    "modifierFlagsCache": 0,
    "parent": undefined,
    "pos": -1,
    "tagName": IdentifierObject {
      "end": -1,
      "escapedText": "Collection",
      "flags": 8,
      "kind": 78,
      "modifierFlagsCache": 0,
      "originalKeywordKind": undefined,
      "parent": undefined,
      "pos": -1,
      "transformFlags": 0,
    },
    "transformFlags": 2,
    "typeArguments": undefined,
  },
  "parent": undefined,
  "pos": -1,
  "transformFlags": 514,
}
`;

exports[`Component Renderers CustomComponentRenderer 1`] = `
NodeObject {
  "children": Array [],
  "closingElement": NodeObject {
    "end": -1,
    "flags": 8,
    "kind": 277,
    "modifierFlagsCache": 0,
    "parent": undefined,
    "pos": -1,
    "tagName": IdentifierObject {
      "end": -1,
      "escapedText": "Custom",
      "flags": 8,
      "kind": 78,
      "modifierFlagsCache": 0,
      "originalKeywordKind": undefined,
      "parent": undefined,
      "pos": -1,
      "transformFlags": 0,
    },
    "transformFlags": 2,
  },
  "end": -1,
  "flags": 8,
  "kind": 274,
  "modifierFlagsCache": 0,
  "openingElement": NodeObject {
    "attributes": NodeObject {
      "end": -1,
      "flags": 8,
      "kind": 282,
      "modifierFlagsCache": 0,
      "parent": undefined,
      "pos": -1,
      "properties": Array [
        NodeObject {
          "end": -1,
          "expression": NodeObject {
            "arguments": Array [
              NodeObject {
                "emitNode": Object {
                  "flags": 131072,
                },
                "end": -1,
                "expression": IdentifierObject {
                  "end": -1,
                  "escapedText": "props",
                  "flags": 8,
                  "kind": 78,
                  "modifierFlagsCache": 0,
                  "originalKeywordKind": undefined,
                  "parent": undefined,
                  "pos": -1,
                  "transformFlags": 0,
                },
                "flags": 8,
                "kind": 202,
                "modifierFlagsCache": 0,
                "name": IdentifierObject {
                  "end": -1,
                  "escapedText": "overrides",
                  "flags": 8,
                  "kind": 78,
                  "modifierFlagsCache": 0,
                  "originalKeywordKind": undefined,
                  "parent": undefined,
                  "pos": -1,
                  "transformFlags": 0,
                },
                "parent": undefined,
                "pos": -1,
                "transformFlags": 0,
              },
              TokenObject {
                "end": -1,
                "flags": 8,
                "hasExtendedUnicodeEscape": undefined,
                "kind": 10,
                "modifierFlagsCache": 0,
                "parent": undefined,
                "pos": -1,
                "singleQuote": undefined,
                "text": "Custom",
                "transformFlags": 0,
              },
            ],
            "end": -1,
            "expression": IdentifierObject {
              "end": -1,
              "escapedText": "findChildOverrides",
              "flags": 8,
              "kind": 78,
              "modifierFlagsCache": 0,
              "originalKeywordKind": undefined,
              "parent": undefined,
              "pos": -1,
              "transformFlags": 0,
            },
            "flags": 8,
            "kind": 204,
            "modifierFlagsCache": 0,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 0,
            "typeArguments": undefined,
          },
          "flags": 8,
          "kind": 283,
          "modifierFlagsCache": 0,
          "parent": undefined,
          "pos": -1,
          "transformFlags": 2,
        },
      ],
      "transformFlags": 2,
    },
    "end": -1,
    "flags": 8,
    "kind": 276,
    "modifierFlagsCache": 0,
    "parent": undefined,
    "pos": -1,
    "tagName": IdentifierObject {
      "end": -1,
      "escapedText": "Custom",
      "flags": 8,
      "kind": 78,
      "modifierFlagsCache": 0,
      "originalKeywordKind": undefined,
      "parent": undefined,
      "pos": -1,
      "transformFlags": 0,
    },
    "transformFlags": 2,
    "typeArguments": undefined,
  },
  "parent": undefined,
  "pos": -1,
  "transformFlags": 2,
}
`;

exports[`Component Renderers DividerRenderer 1`] = `
NodeObject {
  "children": Array [],
  "closingElement": NodeObject {
    "end": -1,
    "flags": 8,
    "kind": 277,
    "modifierFlagsCache": 0,
    "parent": undefined,
    "pos": -1,
    "tagName": IdentifierObject {
      "end": -1,
      "escapedText": "Divider",
      "flags": 8,
      "kind": 78,
      "modifierFlagsCache": 0,
      "originalKeywordKind": undefined,
      "parent": undefined,
      "pos": -1,
      "transformFlags": 0,
    },
    "transformFlags": 2,
  },
  "end": -1,
  "flags": 8,
  "kind": 274,
  "modifierFlagsCache": 0,
  "openingElement": NodeObject {
    "attributes": NodeObject {
      "end": -1,
      "flags": 8,
      "kind": 282,
      "modifierFlagsCache": 0,
      "parent": undefined,
      "pos": -1,
      "properties": Array [
        NodeObject {
          "end": -1,
          "expression": IdentifierObject {
            "end": -1,
            "escapedText": "props",
            "flags": 8,
            "kind": 78,
            "modifierFlagsCache": 0,
            "originalKeywordKind": undefined,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 0,
          },
          "flags": 8,
          "kind": 283,
          "modifierFlagsCache": 0,
          "parent": undefined,
          "pos": -1,
          "transformFlags": 2,
        },
        NodeObject {
          "end": -1,
          "expression": NodeObject {
            "arguments": Array [
              NodeObject {
                "emitNode": Object {
                  "flags": 131072,
                },
                "end": -1,
                "expression": IdentifierObject {
                  "end": -1,
                  "escapedText": "props",
                  "flags": 8,
                  "kind": 78,
                  "modifierFlagsCache": 0,
                  "originalKeywordKind": undefined,
                  "parent": undefined,
                  "pos": -1,
                  "transformFlags": 0,
                },
                "flags": 8,
                "kind": 202,
                "modifierFlagsCache": 0,
                "name": IdentifierObject {
                  "end": -1,
                  "escapedText": "overrides",
                  "flags": 8,
                  "kind": 78,
                  "modifierFlagsCache": 0,
                  "originalKeywordKind": undefined,
                  "parent": undefined,
                  "pos": -1,
                  "transformFlags": 0,
                },
                "parent": undefined,
                "pos": -1,
                "transformFlags": 0,
              },
              TokenObject {
                "end": -1,
                "flags": 8,
                "hasExtendedUnicodeEscape": undefined,
                "kind": 10,
                "modifierFlagsCache": 0,
                "parent": undefined,
                "pos": -1,
                "singleQuote": undefined,
                "text": "Divider",
                "transformFlags": 0,
              },
            ],
            "end": -1,
            "expression": IdentifierObject {
              "end": -1,
              "escapedText": "getOverrideProps",
              "flags": 8,
              "kind": 78,
              "modifierFlagsCache": 0,
              "originalKeywordKind": undefined,
              "parent": undefined,
              "pos": -1,
              "transformFlags": 0,
            },
            "flags": 8,
            "kind": 204,
            "modifierFlagsCache": 0,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 0,
            "typeArguments": undefined,
          },
          "flags": 8,
          "kind": 283,
          "modifierFlagsCache": 0,
          "parent": undefined,
          "pos": -1,
          "transformFlags": 2,
        },
      ],
      "transformFlags": 2,
    },
    "end": -1,
    "flags": 8,
    "kind": 276,
    "modifierFlagsCache": 0,
    "parent": undefined,
    "pos": -1,
    "tagName": IdentifierObject {
      "end": -1,
      "escapedText": "Divider",
      "flags": 8,
      "kind": 78,
      "modifierFlagsCache": 0,
      "originalKeywordKind": undefined,
      "parent": undefined,
      "pos": -1,
      "transformFlags": 0,
    },
    "transformFlags": 2,
    "typeArguments": undefined,
  },
  "parent": undefined,
  "pos": -1,
  "transformFlags": 2,
}
`;

exports[`Component Renderers FlexRenderer 1`] = `
NodeObject {
  "children": Array [],
  "closingElement": NodeObject {
    "end": -1,
    "flags": 8,
    "kind": 277,
    "modifierFlagsCache": 0,
    "parent": undefined,
    "pos": -1,
    "tagName": IdentifierObject {
      "end": -1,
      "escapedText": "Flex",
      "flags": 8,
      "kind": 78,
      "modifierFlagsCache": 0,
      "originalKeywordKind": undefined,
      "parent": undefined,
      "pos": -1,
      "transformFlags": 0,
    },
    "transformFlags": 2,
  },
  "end": -1,
  "flags": 8,
  "kind": 274,
  "modifierFlagsCache": 0,
  "openingElement": NodeObject {
    "attributes": NodeObject {
      "end": -1,
      "flags": 8,
      "kind": 282,
      "modifierFlagsCache": 0,
      "parent": undefined,
      "pos": -1,
      "properties": Array [
        NodeObject {
          "end": -1,
          "expression": IdentifierObject {
            "end": -1,
            "escapedText": "props",
            "flags": 8,
            "kind": 78,
            "modifierFlagsCache": 0,
            "originalKeywordKind": undefined,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 0,
          },
          "flags": 8,
          "kind": 283,
          "modifierFlagsCache": 0,
          "parent": undefined,
          "pos": -1,
          "transformFlags": 2,
        },
        NodeObject {
          "end": -1,
          "expression": NodeObject {
            "arguments": Array [
              NodeObject {
                "emitNode": Object {
                  "flags": 131072,
                },
                "end": -1,
                "expression": IdentifierObject {
                  "end": -1,
                  "escapedText": "props",
                  "flags": 8,
                  "kind": 78,
                  "modifierFlagsCache": 0,
                  "originalKeywordKind": undefined,
                  "parent": undefined,
                  "pos": -1,
                  "transformFlags": 0,
                },
                "flags": 8,
                "kind": 202,
                "modifierFlagsCache": 0,
                "name": IdentifierObject {
                  "end": -1,
                  "escapedText": "overrides",
                  "flags": 8,
                  "kind": 78,
                  "modifierFlagsCache": 0,
                  "originalKeywordKind": undefined,
                  "parent": undefined,
                  "pos": -1,
                  "transformFlags": 0,
                },
                "parent": undefined,
                "pos": -1,
                "transformFlags": 0,
              },
              TokenObject {
                "end": -1,
                "flags": 8,
                "hasExtendedUnicodeEscape": undefined,
                "kind": 10,
                "modifierFlagsCache": 0,
                "parent": undefined,
                "pos": -1,
                "singleQuote": undefined,
                "text": "Flex",
                "transformFlags": 0,
              },
            ],
            "end": -1,
            "expression": IdentifierObject {
              "end": -1,
              "escapedText": "getOverrideProps",
              "flags": 8,
              "kind": 78,
              "modifierFlagsCache": 0,
              "originalKeywordKind": undefined,
              "parent": undefined,
              "pos": -1,
              "transformFlags": 0,
            },
            "flags": 8,
            "kind": 204,
            "modifierFlagsCache": 0,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 0,
            "typeArguments": undefined,
          },
          "flags": 8,
          "kind": 283,
          "modifierFlagsCache": 0,
          "parent": undefined,
          "pos": -1,
          "transformFlags": 2,
        },
      ],
      "transformFlags": 2,
    },
    "end": -1,
    "flags": 8,
    "kind": 276,
    "modifierFlagsCache": 0,
    "parent": undefined,
    "pos": -1,
    "tagName": IdentifierObject {
      "end": -1,
      "escapedText": "Flex",
      "flags": 8,
      "kind": 78,
      "modifierFlagsCache": 0,
      "originalKeywordKind": undefined,
      "parent": undefined,
      "pos": -1,
      "transformFlags": 0,
    },
    "transformFlags": 2,
    "typeArguments": undefined,
  },
  "parent": undefined,
  "pos": -1,
  "transformFlags": 2,
}
`;

exports[`Component Renderers ImageRenderer 1`] = `
NodeObject {
  "children": Array [],
  "closingElement": NodeObject {
    "end": -1,
    "flags": 8,
    "kind": 277,
    "modifierFlagsCache": 0,
    "parent": undefined,
    "pos": -1,
    "tagName": IdentifierObject {
      "end": -1,
      "escapedText": "Image",
      "flags": 8,
      "kind": 78,
      "modifierFlagsCache": 0,
      "originalKeywordKind": undefined,
      "parent": undefined,
      "pos": -1,
      "transformFlags": 0,
    },
    "transformFlags": 2,
  },
  "end": -1,
  "flags": 8,
  "kind": 274,
  "modifierFlagsCache": 0,
  "openingElement": NodeObject {
    "attributes": NodeObject {
      "end": -1,
      "flags": 8,
      "kind": 282,
      "modifierFlagsCache": 0,
      "parent": undefined,
      "pos": -1,
      "properties": Array [
        NodeObject {
          "end": -1,
          "expression": IdentifierObject {
            "end": -1,
            "escapedText": "props",
            "flags": 8,
            "kind": 78,
            "modifierFlagsCache": 0,
            "originalKeywordKind": undefined,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 0,
          },
          "flags": 8,
          "kind": 283,
          "modifierFlagsCache": 0,
          "parent": undefined,
          "pos": -1,
          "transformFlags": 2,
        },
        NodeObject {
          "end": -1,
          "expression": NodeObject {
            "arguments": Array [
              NodeObject {
                "emitNode": Object {
                  "flags": 131072,
                },
                "end": -1,
                "expression": IdentifierObject {
                  "end": -1,
                  "escapedText": "props",
                  "flags": 8,
                  "kind": 78,
                  "modifierFlagsCache": 0,
                  "originalKeywordKind": undefined,
                  "parent": undefined,
                  "pos": -1,
                  "transformFlags": 0,
                },
                "flags": 8,
                "kind": 202,
                "modifierFlagsCache": 0,
                "name": IdentifierObject {
                  "end": -1,
                  "escapedText": "overrides",
                  "flags": 8,
                  "kind": 78,
                  "modifierFlagsCache": 0,
                  "originalKeywordKind": undefined,
                  "parent": undefined,
                  "pos": -1,
                  "transformFlags": 0,
                },
                "parent": undefined,
                "pos": -1,
                "transformFlags": 0,
              },
              TokenObject {
                "end": -1,
                "flags": 8,
                "hasExtendedUnicodeEscape": undefined,
                "kind": 10,
                "modifierFlagsCache": 0,
                "parent": undefined,
                "pos": -1,
                "singleQuote": undefined,
                "text": "Image",
                "transformFlags": 0,
              },
            ],
            "end": -1,
            "expression": IdentifierObject {
              "end": -1,
              "escapedText": "getOverrideProps",
              "flags": 8,
              "kind": 78,
              "modifierFlagsCache": 0,
              "originalKeywordKind": undefined,
              "parent": undefined,
              "pos": -1,
              "transformFlags": 0,
            },
            "flags": 8,
            "kind": 204,
            "modifierFlagsCache": 0,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 0,
            "typeArguments": undefined,
          },
          "flags": 8,
          "kind": 283,
          "modifierFlagsCache": 0,
          "parent": undefined,
          "pos": -1,
          "transformFlags": 2,
        },
      ],
      "transformFlags": 2,
    },
    "end": -1,
    "flags": 8,
    "kind": 276,
    "modifierFlagsCache": 0,
    "parent": undefined,
    "pos": -1,
    "tagName": IdentifierObject {
      "end": -1,
      "escapedText": "Image",
      "flags": 8,
      "kind": 78,
      "modifierFlagsCache": 0,
      "originalKeywordKind": undefined,
      "parent": undefined,
      "pos": -1,
      "transformFlags": 0,
    },
    "transformFlags": 2,
    "typeArguments": undefined,
  },
  "parent": undefined,
  "pos": -1,
  "transformFlags": 2,
}
`;

exports[`Component Renderers StringRenderer basic 1`] = `
NodeObject {
  "children": Array [
    NodeObject {
      "containsOnlyTriviaWhiteSpaces": false,
      "end": -1,
      "flags": 8,
      "kind": 11,
      "modifierFlagsCache": 0,
      "parent": undefined,
      "pos": -1,
      "text": "test",
      "transformFlags": 2,
    },
  ],
  "closingFragment": NodeObject {
    "end": -1,
    "flags": 8,
    "kind": 280,
    "modifierFlagsCache": 0,
    "parent": undefined,
    "pos": -1,
    "transformFlags": 2,
  },
  "end": -1,
  "flags": 8,
  "kind": 278,
  "modifierFlagsCache": 0,
  "openingFragment": NodeObject {
    "end": -1,
    "flags": 8,
    "kind": 279,
    "modifierFlagsCache": 0,
    "parent": undefined,
    "pos": -1,
    "transformFlags": 2,
  },
  "parent": undefined,
  "pos": -1,
  "transformFlags": 2,
}
`;

exports[`Component Renderers StringRenderer missing props 1`] = `"Failed to render String - Unexpected component structure"`;

exports[`Component Renderers TextRenderer 1`] = `
NodeObject {
  "children": Array [
    NodeObject {
      "containsOnlyTriviaWhiteSpaces": false,
      "end": -1,
      "flags": 8,
      "kind": 11,
      "modifierFlagsCache": 0,
      "parent": undefined,
      "pos": -1,
      "text": "test",
      "transformFlags": 2,
    },
  ],
  "closingElement": NodeObject {
    "end": -1,
    "flags": 8,
    "kind": 277,
    "modifierFlagsCache": 0,
    "parent": undefined,
    "pos": -1,
    "tagName": IdentifierObject {
      "end": -1,
      "escapedText": "Text",
      "flags": 8,
      "kind": 78,
      "modifierFlagsCache": 0,
      "originalKeywordKind": undefined,
      "parent": undefined,
      "pos": -1,
      "transformFlags": 0,
    },
    "transformFlags": 2,
  },
  "end": -1,
  "flags": 8,
  "kind": 274,
  "modifierFlagsCache": 0,
  "openingElement": NodeObject {
    "attributes": NodeObject {
      "end": -1,
      "flags": 8,
      "kind": 282,
      "modifierFlagsCache": 0,
      "parent": undefined,
      "pos": -1,
      "properties": Array [
        NodeObject {
          "end": -1,
          "expression": IdentifierObject {
            "end": -1,
            "escapedText": "props",
            "flags": 8,
            "kind": 78,
            "modifierFlagsCache": 0,
            "originalKeywordKind": undefined,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 0,
          },
          "flags": 8,
          "kind": 283,
          "modifierFlagsCache": 0,
          "parent": undefined,
          "pos": -1,
          "transformFlags": 2,
        },
        NodeObject {
          "end": -1,
          "expression": NodeObject {
            "arguments": Array [
              NodeObject {
                "emitNode": Object {
                  "flags": 131072,
                },
                "end": -1,
                "expression": IdentifierObject {
                  "end": -1,
                  "escapedText": "props",
                  "flags": 8,
                  "kind": 78,
                  "modifierFlagsCache": 0,
                  "originalKeywordKind": undefined,
                  "parent": undefined,
                  "pos": -1,
                  "transformFlags": 0,
                },
                "flags": 8,
                "kind": 202,
                "modifierFlagsCache": 0,
                "name": IdentifierObject {
                  "end": -1,
                  "escapedText": "overrides",
                  "flags": 8,
                  "kind": 78,
                  "modifierFlagsCache": 0,
                  "originalKeywordKind": undefined,
                  "parent": undefined,
                  "pos": -1,
                  "transformFlags": 0,
                },
                "parent": undefined,
                "pos": -1,
                "transformFlags": 0,
              },
              TokenObject {
                "end": -1,
                "flags": 8,
                "hasExtendedUnicodeEscape": undefined,
                "kind": 10,
                "modifierFlagsCache": 0,
                "parent": undefined,
                "pos": -1,
                "singleQuote": undefined,
                "text": "Text",
                "transformFlags": 0,
              },
            ],
            "end": -1,
            "expression": IdentifierObject {
              "end": -1,
              "escapedText": "getOverrideProps",
              "flags": 8,
              "kind": 78,
              "modifierFlagsCache": 0,
              "originalKeywordKind": undefined,
              "parent": undefined,
              "pos": -1,
              "transformFlags": 0,
            },
            "flags": 8,
            "kind": 204,
            "modifierFlagsCache": 0,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 0,
            "typeArguments": undefined,
          },
          "flags": 8,
          "kind": 283,
          "modifierFlagsCache": 0,
          "parent": undefined,
          "pos": -1,
          "transformFlags": 2,
        },
      ],
      "transformFlags": 2,
    },
    "end": -1,
    "flags": 8,
    "kind": 276,
    "modifierFlagsCache": 0,
    "parent": undefined,
    "pos": -1,
    "tagName": IdentifierObject {
      "end": -1,
      "escapedText": "Text",
      "flags": 8,
      "kind": 78,
      "modifierFlagsCache": 0,
      "originalKeywordKind": undefined,
      "parent": undefined,
      "pos": -1,
      "transformFlags": 0,
    },
    "transformFlags": 2,
    "typeArguments": undefined,
  },
  "parent": undefined,
  "pos": -1,
  "transformFlags": 2,
}
`;
